# lie-groups

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: basics.rs  bch_vs_exp.rs  random_sampling.rs
src/: bch.rs  conversions.rs  error.rs  lib.rs  prelude.rs  quaternion.rs  root_systems.rs  rplus.rs  so3.rs  su2.rs  su3.rs  sun.rs  traits.rs  u1.rs
src/representation/: casimir.rs  mod.rs  su3_irrep.rs
